public/frontend/css/custom.css
.single-post .post-image img {
	width: 100%;
}

.single-post .entry-content .text-content h1,
.single-post .entry-content .text-content h2,
.single-post .entry-content .text-content h3,
.single-post .entry-content .text-content h4,
.single-post .entry-content .text-content h5,
.single-post .entry-content .text-content h6 {
	margin-bottom: 20px;
}

.single-post .entry-content .text-content p {
	margin-bottom: 1rem;
	line-height: 1 !important;
}

@media screen and (min-width: 1200px) {
	.single-post .post-image img {
		display: block;
		margin-left: auto;
		margin-right: auto;
		width: 75%;
	}
}

